[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/Tilesets/Map001.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Maps/EnemyTarget.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Maps/GameMap.gd" type="Script" id=3]
[ext_resource path="res://Resources/Tilesets/path_001.tres" type="TileSet" id=4]
[ext_resource path="res://Assets/Environment/Tilesets/kenney/terrainTiles_default.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Maps/NavigationMap.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Maps/EnemySpawner.gd" type="Script" id=10]

[sub_resource type="TileSet" id=1]
0/name = "terrainTiles_default.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 128 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 511, Vector2( 0, 1 ), 511 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=15]

[node name="Map001" type="Node2D"]
script = ExtResource( 3 )

[node name="Ground" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 65536, 2, 0, 0, 3, 0, 65536, 4, 0, 65536, 5, 0, 65536, 6, 0, 65536, 7, 0, 65536, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 65536, 12, 0, 65536, 13, 0, 65536, 14, 0, 65536, 15, 0, 0, 16, 0, 65536, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 65536, 65538, 0, 0, 65539, 0, 65536, 65540, 0, 65536, 65541, 0, 0, 65542, 0, 65536, 65543, 0, 0, 65544, 0, 0, 65545, 0, 65536, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 65536, 65551, 0, 65536, 65552, 0, 0, 65553, 0, 65536, 65554, 0, 0, 65555, 0, 65536, 65556, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 65536, 131074, 0, 65536, 131075, 0, 65536, 131076, 0, 0, 131077, 0, 0, 131078, 0, 65536, 131079, 0, 0, 131080, 0, 0, 131081, 0, 65536, 131082, 0, 65536, 131083, 0, 65536, 131084, 0, 65536, 131085, 0, 0, 131086, 0, 65536, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 65536, 131091, 0, 0, 131092, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 65536, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 65536, 196616, 0, 65536, 196617, 0, 65536, 196618, 0, 65536, 196619, 0, 0, 196620, 0, 65536, 196621, 0, 0, 196622, 0, 0, 196623, 0, 65536, 196624, 0, 0, 196625, 0, 65536, 196626, 0, 65536, 196627, 0, 65536, 196628, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 65536, 262147, 0, 65536, 262148, 0, 65536, 262149, 0, 65536, 262150, 0, 0, 262151, 0, 65536, 262152, 0, 65536, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 65536, 262163, 0, 0, 262164, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 65536, 327683, 0, 0, 327684, 0, 65536, 327685, 0, 65536, 327686, 0, 65536, 327687, 0, 65536, 327688, 0, 65536, 327689, 0, 65536, 327690, 0, 65536, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 65536, 327695, 0, 0, 327696, 0, 65536, 327697, 0, 65536, 327698, 0, 0, 327699, 0, 65536, 327700, 0, 0, 458751, 0, 0, 393216, 0, 65536, 393217, 0, 0, 393218, 0, 65536, 393219, 0, 0, 393220, 0, 65536, 393221, 0, 65536, 393222, 0, 0, 393223, 0, 65536, 393224, 0, 0, 393225, 0, 65536, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 65536, 393233, 0, 65536, 393234, 0, 65536, 393235, 0, 65536, 393236, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 65536, 458757, 0, 65536, 458758, 0, 0, 458759, 0, 65536, 458760, 0, 65536, 458761, 0, 0, 458762, 0, 65536, 458763, 0, 65536, 458764, 0, 0, 458765, 0, 65536, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 65536, 458770, 0, 65536, 458771, 0, 65536, 458772, 0, 0, 589823, 0, 0, 524288, 0, 65536, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 65536, 524293, 0, 65536, 524294, 0, 65536, 524295, 0, 0, 524296, 0, 65536, 524297, 0, 0, 524298, 0, 0, 524299, 0, 65536, 524300, 0, 0, 524301, 0, 65536, 524302, 0, 65536, 524303, 0, 0, 524304, 0, 65536, 524305, 0, 0, 524306, 0, 0, 524307, 0, 65536, 524308, 0, 0, 655359, 0, 0, 589824, 0, 65536, 589825, 0, 65536, 589826, 0, 65536, 589827, 0, 65536, 589828, 0, 0, 589829, 0, 65536, 589830, 0, 65536, 589831, 0, 65536, 589832, 0, 65536, 589833, 0, 0, 589834, 0, 65536, 589835, 0, 0, 589836, 0, 0, 589837, 0, 65536, 589838, 0, 0, 589839, 0, 65536, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 65536, 655362, 0, 0, 655363, 0, 0, 655364, 0, 65536, 655365, 0, 65536, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 65536, 655371, 0, 65536, 655372, 0, 65536, 655373, 0, 65536, 655374, 0, 0, 655375, 0, 65536, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 65536, 720903, 0, 65536, 720904, 0, 65536, 720905, 0, 65536, 720906, 0, 65536, 720907, 0, 65536, 720908, 0, 0, 720909, 0, 65536, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 65536, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="NavigationMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( 65536, 0, 196609, 65537, 0, 3, 65545, 0, 0, 65553, 0, 1, 65554, 0, 196610, 65555, 0, 3, 131073, 0, 131073, 131074, 0, 196610, 131075, 0, 196610, 131076, 0, 2, 131077, 0, 196610, 131078, 0, 2, 131079, 0, 196610, 131080, 0, 5, 131081, 0, 65543, 131089, 0, 65536, 131091, 0, 131073, 131092, 0, 3, 131099, 0, 1, 131100, 0, 196610, 131101, 0, 2, 131102, 0, 196610, 131103, 0, 3, 196612, 0, 65536, 196614, 0, 65536, 196616, 0, 65544, 196617, 0, 65547, 196618, 0, 196610, 196619, 0, 3, 196625, 0, 65536, 196628, 0, 65536, 196635, 0, 65536, 196637, 0, 65536, 196639, 0, 65536, 262148, 0, 65536, 262150, 0, 65537, 262151, 0, 196610, 262152, 0, 196613, 262153, 0, 196619, 262155, 0, 65536, 262159, 0, 1, 262160, 0, 196610, 262161, 0, 131075, 262164, 0, 65540, 262165, 0, 10, 262166, 0, 11, 262171, 0, 65537, 262172, 0, 196610, 262173, 0, 65538, 262174, 0, 196610, 262175, 0, 65539, 327684, 0, 65537, 327685, 0, 196610, 327686, 0, 65539, 327691, 0, 131073, 327692, 0, 2, 327693, 0, 196610, 327694, 0, 196610, 327695, 0, 131075, 327700, 0, 65544, 327701, 0, 131081, 327702, 0, 65547, 327703, 0, 196610, 327704, 0, 5, 327705, 0, 11, 327707, 0, 65536, 327709, 0, 65536, 327711, 0, 65536, 393220, 0, 65536, 393222, 0, 65536, 393228, 0, 65536, 393236, 0, 196616, 393237, 0, 196618, 393238, 0, 196619, 393240, 0, 65544, 393241, 0, 131083, 393243, 0, 131073, 393244, 0, 196610, 393245, 0, 65538, 393246, 0, 196610, 393247, 0, 131075, 458756, 0, 65536, 458758, 0, 131073, 458759, 0, 196610, 458760, 0, 196610, 458761, 0, 196610, 458762, 0, 196610, 458763, 0, 196610, 458764, 0, 131075, 458769, 0, 1, 458770, 0, 196610, 458771, 0, 3, 458773, 0, 65536, 458776, 0, 131076, 458777, 0, 196619, 458781, 0, 65536, 524292, 0, 65536, 524305, 0, 65536, 524307, 0, 131073, 524308, 0, 196610, 524309, 0, 131075, 524312, 0, 65536, 524317, 0, 65536, 589824, 0, 196609, 589825, 0, 196610, 589826, 0, 196610, 589827, 0, 196610, 589828, 0, 131075, 589835, 0, 196609, 589836, 0, 196610, 589837, 0, 5, 589838, 0, 10, 589839, 0, 11, 589841, 0, 65536, 589848, 0, 65536, 589851, 0, 1, 589852, 0, 196610, 589853, 0, 65539, 655373, 0, 196616, 655374, 0, 196617, 655375, 0, 196619, 655377, 0, 65536, 655379, 0, 1, 655380, 0, 196610, 655381, 0, 2, 655382, 0, 196610, 655383, 0, 196610, 655384, 0, 131075, 655387, 0, 65536, 655389, 0, 65536, 720906, 0, 1, 720907, 0, 196610, 720908, 0, 3, 720913, 0, 65536, 720915, 0, 65536, 720917, 0, 65536, 720922, 0, 1, 720923, 0, 131075, 720925, 0, 65536, 786434, 0, 1, 786435, 0, 196610, 786436, 0, 2, 786437, 0, 196610, 786438, 0, 3, 786442, 0, 65536, 786444, 0, 65540, 786445, 0, 11, 786449, 0, 131073, 786450, 0, 196610, 786451, 0, 131075, 786453, 0, 65536, 786455, 0, 1, 786456, 0, 196610, 786457, 0, 196610, 786458, 0, 131075, 786461, 0, 65536, 851969, 0, 1, 851970, 0, 131075, 851972, 0, 65536, 851974, 0, 65536, 851977, 0, 8, 851978, 0, 196612, 851979, 0, 196610, 851980, 0, 196613, 851981, 0, 131082, 851982, 0, 11, 851989, 0, 65536, 851991, 0, 65536, 851997, 0, 65536, 917505, 0, 65536, 917508, 0, 65536, 917510, 0, 131073, 917511, 0, 196610, 917512, 0, 196610, 917513, 0, 196613, 917514, 0, 196619, 917517, 0, 196616, 917518, 0, 196614, 917519, 0, 196610, 917520, 0, 196610, 917521, 0, 196610, 917522, 0, 196610, 917523, 0, 196610, 917524, 0, 196610, 917525, 0, 131075, 917527, 0, 65536, 917533, 0, 65536, 983041, 0, 65536, 983043, 0, 196609, 983044, 0, 131075, 983063, 0, 65536, 983065, 0, 8, 983066, 0, 10, 983067, 0, 10, 983068, 0, 6, 983069, 0, 131075, 1048577, 0, 131073, 1048578, 0, 3, 1048581, 0, 1, 1048582, 0, 196610, 1048583, 0, 196610, 1048584, 0, 3, 1048587, 0, 1, 1048588, 0, 196610, 1048589, 0, 2, 1048590, 0, 196610, 1048591, 0, 3, 1048593, 0, 1, 1048594, 0, 196610, 1048595, 0, 3, 1048599, 0, 65536, 1048601, 0, 131076, 1048602, 0, 196617, 1048603, 0, 131077, 1048604, 0, 131083, 1114114, 0, 131073, 1114115, 0, 5, 1114116, 0, 6, 1114117, 0, 131075, 1114120, 0, 65536, 1114123, 0, 65536, 1114125, 0, 65536, 1114127, 0, 65536, 1114129, 0, 65536, 1114131, 0, 65536, 1114135, 0, 65536, 1114137, 0, 65536, 1114139, 0, 196616, 1114140, 0, 196619, 1114142, 0, 1, 1114143, 0, 196610, 1114144, 0, 3, 1179651, 0, 196616, 1179652, 0, 196619, 1179656, 0, 131073, 1179657, 0, 196610, 1179658, 0, 196610, 1179659, 0, 65539, 1179661, 0, 65536, 1179663, 0, 65536, 1179665, 0, 65536, 1179667, 0, 65536, 1179669, 0, 1, 1179670, 0, 196610, 1179671, 0, 131075, 1179673, 0, 65536, 1179678, 0, 65536, 1179680, 0, 65536, 1245195, 0, 131073, 1245196, 0, 196610, 1245197, 0, 131074, 1245198, 0, 196610, 1245199, 0, 131074, 1245200, 0, 196610, 1245201, 0, 131074, 1245202, 0, 196610, 1245203, 0, 131074, 1245204, 0, 196610, 1245205, 0, 131075, 1245209, 0, 65536, 1245213, 0, 1, 1245214, 0, 131075, 1245216, 0, 131073, 1245217, 0, 196611, 1310745, 0, 131073, 1310746, 0, 196610, 1310747, 0, 196610, 1310748, 0, 196610, 1310749, 0, 131075 )
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="TowerExclusion" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 10, 3, 0, 12, 1, 0, 65540, 1, 0, 65546, 2, 0, 196608, 2, 0, 196611, 4, 0, 196623, 2, 0, 262156, 4, 0, 327681, 1, 0, 327696, 3, 0, 393223, 2, 0, 393234, 1, 0, 458767, 2, 0, 524304, 1, 0, 589832, 4, 0, 655363, 3, 0, 655364, 1, 0, 655370, 2, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="SpawnPoint1" type="Position2D" parent="EnemySpawner"]
position = Vector2( 32, 96 )

[node name="SpawnPoint2" type="Position2D" parent="EnemySpawner"]
position = Vector2( 32, 608 )

[node name="EnemyTarget" type="Area2D" parent="." groups=["EnemyTarget"]]
position = Vector2( 2144, 1248 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyTarget"]
shape = SubResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemies" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Towers" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Effects" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}
